<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size_24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_air_line_text"
            style="@style/vodafone_regular_20"/>
        <LinearLayout
            android:layout_marginTop="@dimen/size_24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:hint="@string/air_line_name_text"
                    android:textColorHint="@color/hint_color"
                    android:imeOptions="actionNext"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    style="@style/vodafone_regular_16"
                    android:id="@+id/nameEditText"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:hint="@string/slogan_text"
                    android:textColorHint="@color/hint_color"
                    android:imeOptions="actionNext"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    style="@style/vodafone_regular_16"
                    android:id="@+id/sloganEditText"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:hint="@string/country_text"
                    android:textColorHint="@color/hint_color"
                    android:imeOptions="actionNext"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    style="@style/vodafone_regular_16"
                    android:id="@+id/countryEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:hint="@string/headquarters_text"
                    android:textColorHint="@color/hint_color"
                    android:imeOptions="actionNext"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    style="@style/vodafone_regular_16"
                    android:id="@+id/headquartersEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:hint="@string/website_text"
                    android:textColorHint="@color/hint_color"
                    android:imeOptions="actionNext"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    style="@style/vodafone_regular_16"
                    android:id="@+id/websiteEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/size_8dp"
                style="@style/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:hint="@string/established_text"
                    android:textColorHint="@color/hint_color"
                    android:imeOptions="actionDone"
                    android:ellipsize="end"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    style="@style/vodafone_regular_16"
                    android:id="@+id/establishedEditText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:text="@string/confirm_text"
                style="@style/primaryButton"
                android:id="@+id/confirmBtn"
                android:enabled="false"
                android:layout_marginTop="@dimen/size_8dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp"
                android:text="@string/cancel_text"
                style="@style/outlinedButton"
                android:id="@+id/cancelBtn"
                android:layout_marginTop="@dimen/size_8dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>