<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activities.AirlineDetails"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appBar"
            android:background="@color/white"
            android:theme="@style/Theme.MasterDetailsApplication.AppBarOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginEnd="@dimen/size_36dp"
                android:background="@color/white">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_back"
                    android:background="@color/transparent"

                    android:id="@+id/backBtn"
                    android:contentDescription="@string/back_button_from_airline_details_text" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/countries_text"
                    style="@style/vodafone_regular_24"
                    android:gravity="center"
                    android:layout_margin="@dimen/size_16dp"/>
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24dp"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginEnd="@dimen/size_16dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/size_16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/vodafone_regular_20"
                    android:maxLines="1"
                    android:layout_marginTop="@dimen/size_24dp"
                    android:ellipsize="end"
                    android:id="@+id/airlineTitle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/vodafone_light_20"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:id="@+id/airlineCountry"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/vodafone_light_16"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:id="@+id/airlineSlogan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/vodafone_regular_bold_14"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:text="@string/headquarters_text"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/vodafone_regular_16_20_line_spacing"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:id="@+id/airlineHeadQuarter"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_16dp"

                    android:text="@string/visit_text"
                    style="@style/primaryButton"
                    android:id="@+id/visitBtn"
                    android:layout_marginTop="@dimen/size_16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>